# gargoyle

./: .travis.yml  CONTRIBUTING.md  Makefile  README.md  build-packages.sh  build.sh  full-build-809.sh  full-build-backfire.sh  full-build-trunk.sh  full-build.sh  rebuild.sh
dependencies/cyassl/: Makefile
dependencies/miniupnpd/: Makefile
dependencies/ntpclient/: Makefile
dev-utils/: GenLicences.sh  bootstrap_config.json  config_diff  debian_install_build_deps.sh  do_release.sh  enable_kernel_module_packages.pl  finalize_translation.py  gen-js.pl  internationalize.py  link_module_to_source.sh  linux_newline_format.pl  localize.py  retest.sh  run_all_defconfig  run_all_diffconfig  set_config_custom_target.sh  set_packages_to_build_as_modules.pl  setup_module_edit_dir.sh  upload_packages.sh
dev-utils/Docker/: Dockerfile  README.md
dev-utils/accessibility/: finalize_translation.py  intl_ltd.sh  localize.py
files-generic/config/: Config-gargoyle.in
fon-flash/: Makefile  bin2c.c  build-all-in-one.sh  build-static-pcap.sh  build-static-wx.sh  clock-arch.h  clock.h  fon-flash-gui.cpp  fon-flash.c  fon-flash.cpp  fon-flash.h  fon-flash.rc  fon-flash.xpm  fonflash.vcproj  psock.cpp  psock.h  pt.h  timer.cpp  timer.h  uip.cpp  uip_arp.c  uip_arp.h
i18n-scripts/: check_add_BOM.sh  comparitor.py  finalize_tran_ltd.sh  finalize_translation.py  internationalize.py  intl_ltd.sh  localize.py
netfilter-match-modules/: integrate_netfilter_modules.sh  integrate_netfilter_modules_709.sh  integrate_netfilter_modules_809.sh  integrate_netfilter_modules_backfire.sh  integrate_netfilter_modules_trunk.sh
netfilter-match-modules/layer7/: name
netfilter-match-modules/netset/: name
package-backfire/gargoyle/: Makefile
package-backfire/httpd-gargoyle/: Makefile
package/alsa-lib/: Makefile
package/attr/: Makefile
package/avahi/: Makefile
package/bin2trx/: Makefile
package/bridge-utils/: .Makefile.swp  Makefile
package/bwmon-gargoyle/: Makefile
package/bzip2/: Makefile
package/ca-certificates-combined/: Makefile
package/curl/: Config.in
package/cyassl/: Makefile
package/ddns-gargoyle/: Makefile
package/disktype/: Makefile
package/dosfstools/: Makefile
package/dropbear/: Makefile
package/etherwake/: Makefile
package/ewget/: Config.in  Makefile
package/exfat/: Makefile
package/exfatprogs/: Makefile
package/ffmpeg/: Config.in  Makefile
package/flac/: Makefile
package/gargoyle-extras/: Makefile
package/gargoyle-firewall-util/: Makefile
package/gargoyle-firewall-util-fw3/: Makefile
package/gargoyle-i18n/: Makefile  (+4 more)
package/haserl-i18n/src/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.BashExtensions  THANKS  TODO  aclocal.m4  configure  configure.ac
package/haserl-i18n/src/doc/: Makefile.am  Makefile.in  haserl.1
package/haserl-i18n/src/src/: Makefile.am  Makefile.in  common.c  common.h  config.h.in  h_bash.c  h_bash.h  h_error.c  h_error.h  h_lua.c  h_lua.h  h_lua_common.c  h_lua_common.h  h_luac.c  h_luac.h  h_script.c  h_script.h  h_translate.c  h_translate.h  haserl.c  haserl.h  haserl_lualib.inc  haserl_lualib.lua  lua2c.c  rfc2388.c  rfc2388.h  sliding_buffer.c  sliding_buffer.h
package/haserl-i18n/src/tests/: Makefile.am  Makefile.in  minunit.h  utest_common.c
patches-generic/: 001-gargoyle_include.patch  001-run-httpd-during-sysupgrade.patch  002-yes_we_can_bridge_sta.patch  003-add-more-sources-for-mtdutils.patch  003-busybox_defaults_gargoyle.patch  004-fix_postinst_prerm_scripts.patch  005-passwd.patch  006-opkg_conf_gargoyle_latest_version.patch  007-save_network_state_info.patch  008-gtp.patch  009-named_network_devices.patch  009-ppp-time-fix.patch  01-fix-2.4-iprange.patch  01-wrt160nl-led-fix.patch  010-firewall4_fw3_chains_rules.patch  010-imq.patch  010-imq_common.patch  010-revert_to_iptables.patch  011-arpnat.patch  011-gargoyle_ubus_system_board.patch  011-imq_kernel409.patch  011-imq_kernel414.patch  011-imq_kernel54.patch  011-iproute2_add-missing-libbpf-dependency.patch  012-imq_kernel414.patch  012-oversized-image-will-not-crash-build.patch  013-oversized-image-will-not-crash-build-ramips.patch  013-smaller_cyassl.patch  014-add-gl-ar150-support.patch  014-glinet-support.patch  017-ar71xx-button-handlers.patch  019-start_sysntpd_sooner.patch  02-sane_sysctl_defaults.patch  021-clean-ipkg-partial.patch  022-kernel_module_packages_include_kernel_checksum_in_version.patch  023-nftables-remove-patch-files.patch  024-backport_nftables_bitwise_mask_xor.patch  024-gprv2-sysupgrade-fix.patch  025-fix_edimax_header_length.patch  025-mvebu-image-build-fix.patch  (+92 more)
patches-generic-backfire/: 02-sane_sysctl_defaults.patch  04-arpnat.patch  06-img_mk.patch  09-dynamic-imq-hooks.patch
patches-old/: 001-run-httpd-during-sysupgrade.patch  006-opkg_conf_gargoyle_1.9.patch  01-run-httpd-during-sysupgrade.patch  014-add-gl-ar150-support.patch  015-mac80211_mac_filter.patch  020-layer7-conntrack-adjust.patch  029-kernel-no-ftp.patch  04-arpnat.patch  05-passwd.patch  06-opkg_conf_gargoyle_1.5.patch  07-save_network_state_info.patch  08-ppp-time-fix.patch  10-mr34220v2_and_mr3420v2_support.patch  11-hostapd-fix-radius.patch  111-fix-mvebu-usb.patch  12-oversized-160nl-will-not-crash-build.patch  12-oversized-image-will-not-crash-build.patch  120-relayd-hotplug.patch  13-atheros_reset_button_restores_defaults.patch  15-mac80211_mac_filter.patch  19-start_sysntpd_sooner.patch  20-yes-we-can-bridge-sta.patch  21-clean-ipkg-partial.patch  23-fix-grub2-compile.patch  24-gprv2-sysupgrade-fix.patch  99-gcom-getstrength.patch
sched-modules/: integrate_sched_modules_809.sh
spm/: 001-SPM-generic.diff  010-SPM-ramips-gargoyle-WE526-reverse.diff  010-SPM-ramips-gargoyle-WE526.diff  011-SPM-ar71xx-gargoyle-WR841ND.diff  017-ramips-button-handlers.diff  030-password-to-text.diff  031-disable-firstboot-page.diff  040-MLS-ISP.diff  041-MLS-passwd.diff  309-default-settings.diff  310-SPM-ramips-openwrt-WE526-reverse.diff  310-SPM-ramips-openwrt-WE526.diff  311-SPM-ar71xx-openwrt-WR841ND.diff  README.md
trunk/: Makefile
(+2100 files in other folders)
